--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	        <span class="icon-bar"></span>
 	        <span class="icon-bar"></span>
 	      </button>
-	      <a class="navbar-brand" href="#"><img width="60px" height="60px" alt="poimoe" src="https://cdn0.iconfinder.com/data/icons/significon-social/512/Significon-GooglePlus-128.png"></a>
+	      <a class="navbar-brand" href="#"><img width="60px" height="60px" alt="poimoe" src="images/logo.png"></a>
 	    </div>
 
 	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -29,7 +29,7 @@
 	        	<li class=""><a href="">What I Do</a></li>
 	        	<li class=""><a href="">Blog</a></li>
 	        	<li class=""><a href="">Luroa</a></li>
-	        	<li><a href="">下载 Poimoe</a></li>
+	        	<li><a href="">Download</a></li>
 	       	</ul>
 	    </div>
 	  </div>
@@ -65,7 +65,7 @@
 	<footer>
 		<div class="row" style="width: 100%;text-align:center">
 			<div class="col-md-12">
-				<img width="80" height="80" src="https://cdn0.iconfinder.com/data/icons/significon-social/512/Significon-GooglePlus-128.png" alt="">
+				<img width="80" height="80" src="images/logo.png" alt="">
 			</div>
 		</div>
 		<div class="footer-links">
